# skardi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: datafusion.rs  lib.rs
crates/model/: Cargo.toml
crates/model/examples/: demo.rs  ncf_demo.rs
crates/model/src/: converter.rs  lib.rs  model.rs
crates/model/src/linear/: mod.rs
crates/model/src/onnx/: mod.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: inferencer.rs  lib.rs  pipeline.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  handlers.rs  lib.rs  main.rs  optimizer_registry.rs  remote_storage.rs  server.rs
crates/source/: Cargo.toml
crates/source/src/: access_mode.rs  lib.rs  redis.rs  sql_validator.rs
crates/source/src/lance/: knn_exec.rs  knn_table_function.rs  mod.rs
crates/source/src/providers/: iceberg.rs  lance.rs  mod.rs  mongo.rs  mysql.rs  postgres.rs
crates/source/src/providers/sqlx/: postgres.rs
crates/source/src/redis/: datasource.rs  relation.rs
data/: content_ads.csv
data/movie_embeddings.lance/_indices/98c92af3-a666-4a60-8443-c4929cd7b108/: auxiliary.idx  index.idx
data/movie_embeddings.lance/_transactions/: 0-8a400fa3-df52-45bb-b684-1d653aa47c3a.txn  1-c07cc93b-1775-4653-a090-e573167445ff.txn  2-27bef4dc-671d-4d6a-87c4-9901badb0151.txn
data/movie_embeddings.lance/_versions/: 1.manifest  2.manifest  3.manifest
data/vec_data.lance/_transactions/: 0-2a8041b4-2261-499f-98d2-bd3150bd5174.txn  1-6dbd204c-6408-4e77-841f-d378b157f332.txn
data/vec_data.lance/_versions/: 1.manifest  2.manifest
demo/: README.md  S3_USAGE.md  ctx.yaml  ctx_multi_sources.yaml  ctx_postgres.yaml  ctx_s3_examples.yaml  pipeline.yaml  pipeline_multisource.yaml
demo/iceberg/: ICEBERG_DEMO.md  ctx_iceberg_demo.yaml
demo/iceberg/pipelines/: federated_join_zones.yaml  query_trips_by_date.yaml  trip_statistics.yaml
demo/lance/: LANCE_DEMO.md  ctx_lance.yaml  pipeline_lance.yaml
demo/mongo/: MONGO_DEMO.md  ctx_mongo_demo.yaml  federated_join_and_insert.yaml  insert_product.yaml
demo/mongo/pipelines/: insert_products_from_select.yaml  list_all_products.yaml  query_product_by_id.yaml
demo/mysql/: MYSQL_DEMO.md  ctx_mysql_demo.yaml  delete_user.yaml  federated_join_and_insert.yaml  user_orders_summary.yaml
demo/mysql/pipelines/: insert_user.yaml  query_user_by_id.yaml  search_users_by_email.yaml
demo/onnx_predict/: ONNX_PREDICT_DEMO.md  ctx_movie_recommendation.yaml  pipeline_movie_recommendation.yaml
demo/postgres/: POSTGRES_DEMO.md  ctx_postgres_demo.yaml  insert_user.yaml  query_user_by_id.yaml
demo/postgres/pipelines/: delete_user.yaml  federated_join_and_insert.yaml  update_user_email.yaml
demo/sample_data/: movies.csv  orders.csv  product_inventory.csv  taxi_zones.csv
models/: TinyTimeMixer.onnx  ncf.onnx
