[package]
name = "pipeline"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
skardi-engine = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }


[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }

[lints]
workspace = true
