[package]
name = "source"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true  }
arrow = { workspace = true  }
async-trait = { workspace = true  }
datafusion = { workspace = true }
datafusion-federation = { workspace = true }
datafusion-table-providers = { workspace = true }
derivative = "2.2.0"
futures ={ workspace = true }
hex = "0.4"
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
lance = { workspace = true }
lance-linalg = { workspace = true }
mongodb = "3.1"
mysql_async = "0.36"
percent-encoding = "2.3"
redis = { version = "1.0.0-rc.2", default-features = false, features = ["cluster"] }
secrecy = "0.10"
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = "0.53"
thiserror = "2.0"
tokio = {workspace = true,  features = ["macros", "rt-multi-thread", "sync"]}
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
redis-test = "0.13.0"
tempfile = "3.13"

[lints]
workspace = true
